--- a/home/order/css/order_responsive.css
+++ b/home/order/css/order_responsive.css
@@ -765,8 +765,12 @@ p.thumb_h .notes_color {
 	white-space: nowrap;
 }
 
-.inkbox select {
+.inkbox select.ink {
 	width: 150px;
+}
+
+.inkbox select.areasize {
+	width: 60px;
 }
 
 
@@ -775,6 +779,10 @@ p.thumb_h .notes_color {
 	margin: 40px 0px;
 }
 
+#note_printmethod {
+	width: 100%;
+	height: 5em;
+}
 
 
 
@@ -1746,7 +1754,7 @@ table td.ac {
     color: black;
     cursor: pointer;
     display: block;
-    border: 1px solid #ff0000;
+    border: 1px solid #f00;
     border-radius: 5px;
     margin: 8px 0 0 0;
     width: 100px;
@@ -1757,14 +1765,14 @@ table td.ac {
 	text-align: center;
 	font-weight: normal;
 	border-radius: 5px;
-	border: 1px solid #ff0000;
+	border: 1px solid #f00;
 	background-color: #f3f0e7;
 	background: -moz-linear-gradient(top,#fff, #f3f0e7);
 	background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#EFEFEF));
 	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#ffffffff,endColorstr=#fff3f0e7);
 	box-shadow: 0 0 3px #ccc;
 	text-shadow: 1px 1px 2px #fff;
-	color: #ff0000;
+	color: #f00;
 	cursor: pointer;
 }
 
