--- a/home/scene/css/culstyleadd.css
+++ b/home/scene/css/culstyleadd.css
@@ -193,10 +193,8 @@ padding-left: 20px;
 
 #infoll {
     margin: 60px 0;
+	padding: 105px 0 20px 190px;
     background: url(/common/img/info_ll.png) no-repeat;
-    width: 728px;
-    height: 152px;
-    border: 1px solid #333;
 }
 
 .mail_ll{
