--- a/home/order/css/order_responsive.css
+++ b/home/order/css/order_responsive.css
@@ -262,14 +262,15 @@ dl.list dd {
 	font-size:14px;
 }
 
-.item_name p{
-	padding-top: 12px;
-	font-weight:bold;
-	color:#C60;
-	font-size:16px;
-	text-align: center;
-	background: #fff9f3;
-	border: 1px solid #feefe2;
+.item_name p {
+    padding-top: 12px;
+    font-weight: bold;
+    color: #C60;
+    font-size: 16px;
+    text-align: center;
+    background: #fff9f3;
+    border: 1px solid #feefe2;
+    margin-left: 50px;
 }
 .rankno{
 	position:absolute;
