--- a/home/m3/css/style_responsive.css
+++ b/home/m3/css/style_responsive.css
@@ -5,7 +5,7 @@
 @media screen and (max-width: 768px){
 
 /*------------------------------------------------------------
-	TOP?"}疵[?!ｸ
+	TOP
 ------------------------------------------------------------*/
 /* mainVisual */
 /*#mainVisual {
@@ -15,6 +15,8 @@
 #warapper {
     width: 100%;
     margin: 0 auto;
+	background-color: #ffffff;
+	z-index: 1;
 }
 
 #header{
@@ -597,6 +599,7 @@
     vertical-align: sub;
     position: relative;
     right: 12px;
+    top: 8px;
 }
 
 #notification .newback {
@@ -611,7 +614,6 @@
     font-size: 0.9em;
     padding-top: 7px;
     position: relative;
-    top: -37px;
 }
 
 
