--- a/home/design/css/style_emb.css
+++ b/home/design/css/style_emb.css
@@ -403,13 +403,13 @@ h4.ctr_bld {
 
 .katadaibtn {
     text-align: center;
-    border: 1px solid #555;
+  /*  border: 1px solid #555;   */
     width: 100px;
     line-height: 233%;
     color: #555;
     border-radius: 5px;
-    box-shadow: 1px 1px 3px #888;
-    background: -webkit-gradient(linear, left top, left bottom, from(#FFF), to(#EEE));
+ /*   box-shadow: 1px 1px 3px #888;   */
+ /*   background: -webkit-gradient(linear, left top, left bottom, from(#FFF), to(#EEE));   */
     margin: 0px 0px 10px 0;
     height: 30px;
     float: right;
