--- a/home/common/css/dev-base_responsive.css
+++ b/home/common/css/dev-base_responsive.css
@@ -375,19 +375,19 @@
 	.how_to_mypage img {
 		vertical-align: middle;
 	}
-	.login_btn {
-		display: inline-block;
-		padding: 0px 15px;
-		margin: 5px 12px;
-		cursor: pointer;
-		background: #5d87ec;
-		border-radius: 6px;
-		letter-spacing: 0.6px;
-		float: right;
-		height: 25px;
-		text-align: center;
-		font-size: 15px
-	}
+    .login_btn {
+        display: inline-block;
+        padding: 0px 15px;
+        margin: 5px 12px;
+        cursor: pointer;
+        background: #1c42a1;
+        border-radius: 6px;
+        letter-spacing: 0.6px;
+        float: right;
+        height: 25px;
+        text-align: center;
+        font-size: 15px;
+    }
 	.logout_btn {
 		display: inline-block;
 		float: right;
@@ -722,7 +722,7 @@
 		width: 99%;
 		list-style: none;
 		position: absolute;
-		z-index: 999;
+		z-index: 9999;
 		left: 0px;
 		margin: 51px 0;
 		padding: 0;
@@ -792,6 +792,19 @@
 	#gnavi ul li ul li.com:hover {
 		background: #fff;
 	}
+    
+    #gnavi #odrbtn {
+        background-color: #4173ed;
+        color: white;
+        border-right: solid 1px #4173ed;
+        border-bottom: 1px solid #4173ed;
+        border-top: 1px solid #4173ed;
+        border-left: 0;
+    }
+    
+    #gnavi #odrtxt{
+        background-color: #e1e9fc
+    }
 	/*		pan navi
 	===============================================================*/
 	div.panwrap {
