--- a/home/order/css/order_responsive.css
+++ b/home/order/css/order_responsive.css
@@ -458,7 +458,7 @@ li.firstlist {
 	background: url(/order/img/color.png) no-repeat;
 }
 
-.size {
+.item_info .size {
 	background: url(/order/img/size.png) no-repeat;
 }
 
