--- a/home/price/css/printprice.css
+++ b/home/price/css/printprice.css
@@ -39,6 +39,11 @@
 .comment_t {
 	margin: 16px 0;
 }
+.price_comment{
+	border: 1px solid ;
+	padding: 14px;
+	margin-bottom: 20px;
+}
 
 h3.ttlh3,
 p.ttlh3 {
